# TeeTime-Cpp

./: .editorconfig  .gitmodules  CMakeLists.txt  cmake_linux.sh  cmake_vs2015_x64.cmd  cmake_vs2015_x86.cmd  cmake_vs2017_x64.cmd  cmake_vs2017_x86.cmd  perf_record.sh  perf_report.sh  perf_stat.sh  readme.md  run.sh  run_cmake.cmd  run_cmake.sh
benchmark/: Benchmark.h  CMakeLists.txt  fastflow_md5.cpp  io.cpp  io_fastflow.cpp  io_fastflow_allocator.cpp  io_teetime.cpp  main.cpp  makeplot.cpp  md5.cpp  md5_fastflow_allocator.cpp  md5_teetime.cpp  pipeline.cpp  queue.cpp  sleeper.cpp  sleeper_teetime.cpp  teetime_md5.cpp
benchmark/fastflow/: buffer.hpp
benchmark/io/: CMakeLists.txt  io.cpp  io_teetime.cpp
benchmark/java/md5/: .gitignore  .project  io.sh  md5.sh  pom.xml
benchmark/java/md5/src/main/java/teetime/: CPUTestConfiguration.java  CPUTestExecution.java  CommandLineArguments.java  IOTestConfiguration.java  IOTestExecution.java  Md5Benchmark.java  WorkerThreadsConfig.java
benchmark/java/md5/src/main/java/teetime/measurement/: TimeMeasurement.java  TimeMeasurementCSVWriter.java
benchmark/java/md5/src/main/java/teetime/stage/: IntHashProducerStage.java  MD5BruteforceStage.java  PrinterStage.java  ReaderWriterStage.java
benchmark/java/md5/src/main/resources/: logback-test.xml
benchmark/java/md5/src/test/java/teetime/stage/: MD5BruteforceStageTest.java
benchmark/md5/: CMakeLists.txt  md5.cpp  md5_teetime.cpp
benchmark/mipmaps/: CMakeLists.txt  mipmaps.cpp  mipmaps_fastflow.cpp  mipmaps_fastflow_allocator.cpp  mipmaps_teetime.cpp
benchmark/queue/: CMakeLists.txt  common.h  queue_intarray.cpp  queue_matrix.cpp  queue_pointer.cpp  queue_shared.cpp  queue_string.cpp  queue_vector.cpp  stats.cpp
examples/: CMakeLists.txt  md5.cpp
fastflow/: CMakeLists.txt  md5.cpp
include/johl/: foo.h
include/teetime/: AbstractConsumerStage.h  AbstractInputPort.h  AbstractOutputPort.h  AbstractPipe.h  AbstractPort.h  AbstractProducerStage.h  AbstractStage.h  BlockingQueue.h  BufferedFile.h  Configuration.h  Execution.h  File.h  FileBuffer.h  Image.h  InputPort.h  Md5Hash.h  Optional.h  OutputPort.h  Pipe.h  Port.h  Runnable.h  Signal.h  SynchedPipe.h  Thread.h  UnsynchedPipe.h  common.h  logging.h  platform.h
include/teetime/pipes/: AbstractPipe.h  AlignedProducerConsumerQueue.h  Pipe.h  ProducerConsumerQueue.h  SpscPointerQueue.h  SpscQueue.h  SpscValueQueue.h  SynchedPipe.h  UnsynchedPipe.h
include/teetime/ports/: AbstractInputPort.h  AbstractOutputPort.h  AbstractPort.h  InputPort.h  OutputPort.h  Port.h
include/teetime/stages/: AbstractConsumerStage.h  AbstractFilterStage.h  AbstractProducerStage.h  AbstractStage.h  CollectorSink.h  DelayStage.h  Directory2Files.h  DistributorStage.h  File2Bytes.h  File2FileBuffer.h  FileExtensionSwitch.h  FunctionStage.h  InitialElementProducer.h  Md5Hashing.h  MergerStage.h  RandomIntProducer.h  ReadImage.h  ResizeImage.h
include/teetime/stages/benchmark/: ReverseIntMd5Hashing.h
src/: AbstractOutputPort.cpp  AbstractStage.cpp  BufferedFile.cpp  CMakeLists.txt  Configuration.cpp  Image.cpp  Md5Hash.cpp  Runnable.cpp  Thread.cpp  foo.cpp  logging.cpp  platform_posix.cpp  platform_win32.cpp  stb_image_resize.h  stb_image_write.h
src/ports/: AbstractOutputPort.cpp
src/stages/: AbstractStage.cpp  Directory2Files.cpp  Directory2Files_posix.cpp  Directory2Files_win32.cpp  File2Bytes.cpp  File2FileBuffer.cpp  FileExtensionSwitch.cpp  Md5Hashing.cpp  RandomIntProducer.cpp  ReadImage.cpp  ResizeImage.cpp
test/: CMakeLists.txt  ConfigurationTest.cpp  DelayStageTest.cpp  DistributorStageTest.cpp  DistributorTest.cpp  LogTest.cpp  MergerStageTest.cpp  MergerTest.cpp  SpscQueueTest.cpp  StageTest.cpp  SynchedPipeTest.cpp  footest.cpp  main.cpp
test/stages/: Directory2FilesTest.cpp  File2FileBufferTest.cpp  FileExtensionSwitchTest.cpp  FunctionStageTest.cpp  IntConsumerStage.h  IntProducerStage.h  Md5HashingTest.cpp  ReadImageTest.cpp
